Tue Jan 29 08:39:24 2002  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>

	* ace/CORBA_macros.h:
	  Added ACE_ENV_ARG macros to replace the TAO_ENV_ARG macros
	  defined in TAO/tao/orbconf.h. All exception related macros
	  are now defined in ace/CORBA_macros.h, and the TAO_ENV_ARG
	  macros will soon be deprecated.

        * include/makeinclude/wrapper_macros.GNU:
	  Added the include_env switch for compatibility with the
	  exception handling use before TAO 1.2.2.

Tue Jan 29 08:17:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added compiler flags for new cosevent orbsvcs test library CECTEST
          Added compiler flags for new notify orbsvcs test library NotifyTests

Mon Jan 28 17:44:51 2002  Steve Huston  <shuston@riverace.com>

        * ace/Process_Manager.cpp (wait): When waiting for a non-specific
          process, specify -1 pid for waitpid(). This is necessary because
          of Fri Jan 25 19:58:41 2002  Steve Huston  <shuston@riverace.com>
          change to not alter the process group ID when ACE_Process_Manager
          spawns a process.
          Timed waits for a process still don't work on non-Win32, but
          this fix corrects the failed wait with errno == ECHILD.

Mon Jan 28 12:16:28 2002  Carlos O'Ryan  <coryan@uci.edu>

	* bin/auto_run_tests.lst:
	  Removed EC_Basic and Event_Latency tests from nightly builds, I
	  left them there by mistake when I took them out of the
	  repository (around December, 25th 2001)

Mon Jan 28 13:20:32 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* XML/common/AttributesImpl.cpp: Removed a bunch of inline
	  designators.

Sun Jan 27 22:18:50 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/msvc_auto_compile.pl: Projects in XML subdirectory are
	  interdependent.  List out the order they should be built
	  explicitly.

Sun Jan 27 12:48:48 2002  Ossama Othman  <ossama@uci.edu>

	* bin/auto_run_tests.lst
	* bin/performance_stats.sh:
